Upgrade PHP base image to 8.4-apache to address vulnerabilities

--- a/phpServer/Dockerfile
+++ b/phpServer/Dockerfile
@@ -1,8 +1,7 @@
-FROM php:8.1-apache
+FROM php:8.4-apache # ¡CAMBIO AQUÍ!
 
 WORKDIR /var/www/html
 
-# Instala apt-utils primero para evitar errores de debconf, y luego el resto de dependencias.
 RUN apt-get update && \
     apt-get install -y \
     apt-utils \
@@ -10,21 +9,14 @@ RUN apt-get update && \
     libzip-dev \
     git \
     unzip && \
-    docker-php-ext-install \
-    curl \
-    json \
-    zip \
-    && rm -rf /var/lib/apt/lists/*
+    # Instala las extensiones PHP. Separamos 'zip' por si acaso.
+    docker-php-ext-install curl json && \
+    docker-php-ext-configure zip && \
+    docker-php-ext-install zip && \
+    rm -rf /var/lib/apt/lists/*
 
 # Copia los archivos de tu aplicación PHP al directorio de trabajo del contenedor
-# Asegúrate de que los archivos dentro de phpServer/ se copien a /var/www/html
 COPY . /var/www/html
-
-# Si tu directorio 'vendor' ya está en Git, no necesitas descomentar la línea de composer install.
-# Si 'vendor' no está en Git y quieres que Composer lo genere en Back4App,
-# entonces descomenta las siguientes líneas:
-# COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-# RUN composer install --no-dev --optimize-autoloader
 
 EXPOSE 80
 
